[package]
name = "elf_analyzer_wasm"
version = "0.1.0"
edition = "2024"
authors = ["proton <zouyuanhaogz@hotmail.com>"]
description = "A WebAssembly tool to parse ELF files and extract global variables."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"                            # Or your chosen version
elf = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# New DWARF parsing dependencies
object = { version = "0.36.7", features = [
    "read_core",
    "elf",
] } # Check for latest
gimli = { version = "0.31.1", features = ["std", "read"] } # Check for latest

log = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1.7"
cpp_demangle = "0.4"

[profile.release]
# 为 Wasm 优化大小和速度
lto = true
opt-level = 's'   # 'z' for even smaller size, '3' for speed
codegen-units = 1
panic = "abort"   # 减小 panic 实现的大小
